--- a/app/JSONFiles/Components.json
+++ b/app/JSONFiles/Components.json
@@ -90,8 +90,8 @@
   "Shield motor":
 
   {
-    "Descripcion": "El Arduino motor shield está diseñado para cargas inductivas como relés, solenoides y motores DC. Que permite manejar dos motores DC controlando las velocidad y dirección de cada motor de forma independiente. También permite medir la corriente absorbida por cada motor entre otras características. Puede ser alimentado por una fuente externa, por lo tanto debemos alimentar al Arduino conectado al motor shield mediante el alimentador y no alimentarlo por USB porque la corriente del motor puede exceder la corriente máxima del estándar USB.",
-    "Foto": "images/Components/ShieldMotor.jpg"
+    "Descripcion": "El Arduino motor shield está diseñado para cargas inductivas como relés, solenoides y motores DC. Que permite manejar dos motores DC controlando las velocidad y dirección de cada motor de forma independiente. También permite medir la corriente absorbida por cada motor entre otras características. Puede ser alimentado por una fuente externa, por lo tanto debemos alimentar al Arduino conectado al motor shield mediante el alimentador y no alimentarlo por USB porque la corriente del motor puede exceder la corriente máxima del estándar USB.<br><br> Creditos de la foto: <a href=\"\" onclick=\"externalLink('https://www.flickr.com/photos/adafruit/25840662998/in/photolist-6JV1Md-Fns9Qo-p4usv8-AY87qV-Amumdr-GqTsBt-pQ43cC-BLu5gM-Fv9VZZ-S4fD5L-D8wJ6L-HG1MXY-P487gw-qzsxuR-5T84Jn-21YTsH9-M3E15f-MSVy9p-FqYSSR-Dg3bGp-wkNx6B-rpVVu1-rqWoU6-qKDdXB-qT38pP-pPY5az-q7dKDx-paAUYd-pQ18hm-q7oqVV-pQ439G-pPY52D-q5icJs-pQ435o-pQ2mtP-q7woud-nAye1F-f9Z3MS-dH5QRc-bfNNJR-aXd4CT-avcZQJ-7H6bdz-6MXk48-6rGG6N-69vCra-695q8y-5pdUuq-5p9B5K-Fbyu1')\">Adafruit Industries </a> via <a href=\"\" onclick=\"externalLink('https://www.flickr.com/')\">flickr</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-nc-sa/2.0/')\">(licence)</a>",
+    "Foto": "images/Components/ShieldMotor2.jpg"
   },
 
   "Porta baterías":
@@ -104,28 +104,28 @@
   "Chasís":
 
   {
-    "Descripcion": "Armazón que sostiene el motor y la carrocería de un vehículo. Creditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/74/1a/73/7a/46/SCRU-FEv1body_preview_featured.jpg')\">Tingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Tingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
+    "Descripcion": "Armazón que sostiene el motor y la carrocería de un vehículo.<br><br> Creditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/74/1a/73/7a/46/SCRU-FEv1body_preview_featured.jpg')\">Thingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Thingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
     "Foto": "images/Components/Chasis.jpg"
   },
 
   "Soporte 1 del sensor ultrasónico":
 
   {
-    "Descripcion": "Elemento impreso en 3D que sirve como soporte para el sensor ultrasónico (complementado con el soporte 2). Créditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/bf/71/e0/dd/f4/SCRU-FEv1servoExtender2_preview_featured.jpg')\">Tingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Tingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
+    "Descripcion": "Elemento impreso en 3D que sirve como soporte para el sensor ultrasónico (complementado con el soporte 2).<br><br> Créditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/bf/71/e0/dd/f4/SCRU-FEv1servoExtender2_preview_featured.jpg')\">Thingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Thingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
     "Foto": "images/Components/SoporteUltra.jpg"
   },
 
   "Soporte 2 del sensor ultrasónico":
 
   {
-    "Descripcion": "Elemento impreso en 3D que sirve como soporte para el sensor ultrasónico (complementado con el soporte 1). Créditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/89/d4/51/73/04/SCRU-FEv1USmount_preview_featured.jpg')\">Tingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Tingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
+    "Descripcion": "Elemento impreso en 3D que sirve como soporte para el sensor ultrasónico (complementado con el soporte 1).<br><br> Créditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/89/d4/51/73/04/SCRU-FEv1USmount_preview_featured.jpg')\">Thingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Thingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
     "Foto": "images/Components/Soporte2Ultra.jpg"
   },
 
   "Rueda loca":
 
   {
-    "Descripcion": "Es una rueda sin tracción, simple o doble, que puede girar libremente. Creditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/89/d4/51/73/04/SCRU-FEv1USmount_preview_featured.jpg')\">Tingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Tingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
+    "Descripcion": "Es una rueda sin tracción, simple o doble, que puede girar libremente.<br><br> Creditos de la foto: <a href=\"\" onclick=\"externalLink('https://cdn.thingiverse.com/renders/89/d4/51/73/04/SCRU-FEv1USmount_preview_featured.jpg')\">Thingiverse </a> via <a href=\"\" onclick=\"externalLink('https://www.thingiverse.com/')\">Thingiverse</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/3.0/')\">(licence)</a>",
     "Foto": "images/Components/ruedaLoca.jpg"
   },
 
@@ -145,8 +145,8 @@
 
   "Módulo Bluetooth":
   {
-    "Descripcion": "Este módulo da la posibilidad al Arduino de comunicarse sin cables con otros dispositivos. El módulo Bluetotth HC-06 se comporta como esclavo, , esperando peticiones de conexión, Si algún dispositivo se conecta, el HC-06 transmite a este todos los datos que recibe del Arduino y viceversa.",
-    "Foto": "images/Components/moduloBluetooth.png"
+    "Descripcion": "Este módulo da la posibilidad al Arduino de comunicarse sin cables con otros dispositivos. El módulo Bluetotth HC-06 se comporta como esclavo, , esperando peticiones de conexión, Si algún dispositivo se conecta, el HC-06 transmite a este todos los datos que recibe del Arduino y viceversa. Créditos de la foto: <a href=\"\" onclick=\"externalLink('https://commons.wikimedia.org/wiki/File:Bluetooth.png')\">Quel.soler</a> via <a href=\"\" onclick=\"externalLink('https://commons.wikimedia.org/')\">Commons Wikipedia</a> <a href=\"\" onclick=\"externalLink('https://creativecommons.org/licenses/by-sa/4.0/deed.en')\">(licence)</a> No se hicieron cambios",
+    "Foto": "images/Components/moduloBluetooth2.png"
   },
 
   "Base de brazo":
